# esp32ahrs-test

./: .gitignore  .gitmodules  README.md  add_submodules.sh
docs/docs/: about.md  docs.md  index.md
docs/docs/ESP32-S3-CAM/: esp32-s3-cam.txt
docs/docs/css/: none-web.css  pdf.css  print.css
docs/docs/development/: architecture.md  coding_style.md  queue.md
docs/docs/getting_started/: build.md  installation.md
esp32ahrs/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
esp32ahrs/components/bluetooth/: CMakeLists.txt  README.txt  bluetooth.c
esp32ahrs/components/bluetooth/include/: bluetooth.h
esp32ahrs/components/data/: AHRS_data.c  CMakeLists.txt  IMU_data.c  msgbuffer_pool_sample.c  ws_msg.c  ws_msg_ringbuf.c
esp32ahrs/components/madgwick/: CMakeLists.txt
esp32ahrs/components/utils/: CMakeLists.txt  README.txt  print_task_list.c
esp32ahrs/components/webserver/: CMakeLists.txt  webserver.c
esp32ahrs/components/wifi/: wifi.c
esp32ahrs/main/: CMakeLists.txt  main.c
esp32ahrs/web/: README.md  package-lock.json  package.json  stats.html  tsconfig.json  vite.config.js
esp32ahrs/web/asyncapi/: README.md  asyncapi.yaml  asyncapi_old1.yaml  types.ts
esp32ahrs/web/backend/: server.js  server.ts
esp32ahrs/web/frontend/: index.html
esp32ahrs/web/frontend_old/: index.html
esp32ahrs/web/scripts/: generate-client.ts  generate-pinia.ts  generate-types.ts  watch-client.ts
esp32imu/: .gitignore  README.md  partitions.csv
esp32imu/components/webserver/: webserver.c
esp32imu/main/: CMakeLists.txt  main.c
(+96 files in other folders)
